# SmartHouseCli

./: CMakeLists.txt  conanfile.txt  main.cpp
include/Adapters/: IBasicDeviceManager.hpp  IBasicDeviceManipulator.hpp  IDeviceManager.hpp  IDeviceManipulator.hpp
include/Adapters/Impl/: DeviceManagerImpl.hpp  DeviceManipulatorImpl.hpp
include/Application/: IApplication.hpp
include/Application/Impl/: ApplicationImpl.hpp
include/Domain/: BasicDeviceInfo.hpp  CastOrNullptr.hpp  DeviceFamily.hpp  DeviceMethod.hpp  DeviceProperty.hpp  DeviceType.hpp  IBasicDevice.hpp  IDeviceContainer.hpp  ILightGroup.hpp  ILightingDevice.hpp  ResultObject.hpp
include/Domain/Factories/: AbstractFactory.hpp  IFactory.hpp  XiaomiDeviceFactory.hpp  XiaomiFactory.hpp
include/Domain/Impl/: DeviceContainer.hpp  IPerformer.hpp  LightGroupImpl.hpp  LightingDevice.hpp  LightingDeviceColor.hpp
include/Domain/LightingDevices/: ILightingDevice.hpp  ILightingDeviceColor.hpp  LightingDeviceState.hpp
include/Domain/LightingDevices/Impl/: LightGroupImpl.hpp  LightingDevice.hpp  LightingDeviceColor.hpp
include/Domain/Performer/: PerformerImpl.hpp
include/Domain/Performers/XiaomiPerformer/: RequestCreator.hpp  RequestSender.hpp  ResponseParser.hpp  XiaomiPerformer.hpp
include/Domain/Performers/YeelightPerformer/: PerformerImpl.hpp  RequestCreator.hpp  XiaomiPerformer.hpp
include/Domain/Warehouse/: DeviceContainer.hpp  DeviceReaderYaml.hpp  DeviceWriterYaml.hpp  IDeviceReader.hpp  IDeviceWriter.hpp
include/Utils/: RGBOperations.hpp  StringOperations.hpp
src/: CMakeLists.txt
src/Adapters/: AdapterCli.cpp  CMakeLists.txt
src/Adapters/Impl/: DeviceManagerImpl.cpp  DeviceManipulator.cpp
src/Application/: CMakeLists.txt
src/Application/Impl/: ApplicationImpl.cpp
src/Domain/: CMakeLists.txt
src/Domain/Factories/: AbstractFactory.cpp  XiaomiDeviceFactory.cpp  XiaomiFactory.cpp
src/Domain/Impl/: DeviceContainer.cpp  LightGroupImpl.cpp  LightingDevice.cpp  LightingDeviceColor.cpp
src/Domain/LightingDevices/: LightingDeviceState.cpp
src/Domain/LightingDevices/Impl/: LightGroupImpl.cpp  LightingDevice.cpp  LightingDeviceColor.cpp
src/Domain/Performer/: PerformerImpl.cpp  RequestCreator.cpp  RequestSender.cpp  ResponseParser.cpp
src/Domain/Performers/XiaomiPerformer/: RequestCreator.cpp  RequestSender.cpp  ResponseParser.cpp  XiaomiPerformer.cpp
src/Domain/Performers/YeelightPerformer/: PerformerImpl.cpp  RequestCreator.cpp  RequestSender.cpp  ResponseParser.cpp  XiaomiPerformer.cpp
src/Domain/Warehouse/: DeviceContainer.cpp  DeviceReaderYaml.cpp  DeviceWriterYaml.cpp
src/Utils/: CMakeLists.txt  RGBOperations.cpp  StringOperations.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/DomainTests/: CastOrNullptrTest.hpp  DeviceContainerTest.hpp  LightGroupTest.hpp  LightingDeviceStateTest.hpp  LightingDeviceTest.hpp
tests/DomainTests/PerformerTests/: RequestBuilderTest.hpp  ResponseParserTest.hpp
tests/UtilsTests/: RGBOperationsTest.hpp  StringOperationsTest.hpp
